fix(globals): add breakpoint for extra small screens; update mass download component visibility; enhance calendar component pointer events

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,8 @@
   --color-error-red: rgba(187, 35, 19, 1);
   --color-purple-mist: rgba(249, 246, 255, 1);
   --color-lavender-mist: rgba(236, 227, 255, 1);
+
+  --breakpoint-xs: 390px
 }
 
 :root {
